made gif id an element of its own to prevent overlap

--- a/style.css
+++ b/style.css
@@ -213,6 +213,5 @@ box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     font-size: 30px;
 }
 #gif {
-padding: 50px;
 display: flex;
 height: 120px;}
